--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"globals": "^16.2.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
+		"sass-embedded": "^1.93.3",
 		"slice-machine-ui": "^2.20.0",
 		"svelte": "^5.33.14",
 		"svelte-check": "^4.2.1",
