--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "concurrently \"npm:vite:dev\" \"npm:slicemachine\" --prefix-colors blue,magenta",
-		"vite:dev": "vite dev",
+		"vite:dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -18,6 +18,7 @@
 		"@prismicio/client": "^7.21.0",
 		"@prismicio/svelte": "^2.0.0",
 		"@tailwindcss/vite": "^4.1.17",
+		"gsap": "^3.13.0",
 		"tailwindcss": "^4.1.17"
 	},
 	"devDependencies": {
