--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
 	},
 	"dependencies": {
 		"@prismicio/client": "^7.21.0",
-		"@prismicio/svelte": "^2.0.0",
 		"@tailwindcss/vite": "^4.1.17",
 		"gsap": "^3.13.0",
+		"swiper": "^12.0.3",
 		"tailwindcss": "^4.1.17"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.9",
 		"@eslint/js": "^9.28.0",
+		"@prismicio/svelte": "^2.0.0",
 		"@slicemachine/adapter-sveltekit": "^0.3.87",
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-netlify": "^5.2.4",
